--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                 <!-- Statue -->
                 <div class="hero-container">
-                    <img class="hero-image" src="hero-image.png">
+                    <img class="hero-image" src="hero-image.png" alt="Hero-Image">
                 </div>
         </div>
     </div>
