--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="desktop-nav">
             <img class="logo" src="logo.png" alt="Brady-Paterson-logo">
             <div class="nav-links">
-              <div class="nav-link">My work</div>
+              <a href="/my-work/"></a><div class="nav-link">My work</div></a>
               <div class="nav-link">My Story</div>
               <div class="nav-link">Connect</div>
             </div>
