--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brady Paterson - Portfolio</title>
+    <meta name="description" content="Brady Paterson – Computer Science student, varsity athlete, and freelance web developer helping businesses grow through modern websites and AI automation." />
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="mediaqueries.css">
 </head>
