--- a/my-work/index.html
+++ b/my-work/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Work - Brady Paterson</title>
-   <link rel="stylesheet" href="my-work/styles.css">
-   <link rel="stylesheet" href="my-work/media.css">
+   <link rel="stylesheet" href="/my-work/styles.css">
+   <link rel="stylesheet" href="/my-work/media.css">
 </head>
 <body>
     <div class="container">
@@ -14,7 +14,7 @@
             <div class="logo"></div>
             <div class="nav-links">
                 <a href="#" class="nav-link">My Story</a>
-                <a href="/my-work/" class="nav-link active">My Work</a>
+                <a href="#container" class="nav-link active">My Work</a>
                 <a href="#" class="nav-link">Connect</a>
             </div>
         </nav>
