--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="hero">
         <!-- Left Sidebar -->
         <nav class="desktop-nav">
-            <img class="logo" src="logo.png" alt="Brady-Paterson-logo">
+            <a href="/logo-meaning/" ><img class="logo" src="logo.png" alt="Brady-Paterson-logo"></a>
             <div class="nav-links">
-              <a href="/my-work/"><div class="nav-link">My work</div></a>
-              <div class="nav-link">My Story</div>
-              <div class="nav-link">Connect</div>
+            <a href="/my-work/"><div class="nav-link">My work</div></a>
+            <a href="/my-story/"><div class="nav-link">My Story</div></a>
+            <a href="/contact/"><div class="nav-link">Connect</div></a>
             </div>
         </nav>
 
